...
    onChangeText?: (text: string) => void;
    onSelectBuilding?: (mapLocation: MapLocation, coordinates: Coordinates | null) => void;
    onClickButton?: () => void;
    onClear?: () => void;
}

const MapSearchBar: React.FC<MapSearchBarProps> = ({mapsAdapter,toValue,placeholder = "Search building, address, or classroom",onChangeText,onSelectBuilding,onClickButton,onClear}) => {
    const [listAppearance, setListAppearance] = useState<boolean>(true);
    const [suggestions, setSuggestions] = useState<MapLocation[]>([]);
    const sessionToken = useRef(Date.now().toString());

    const handleChange = (text: string) => {
        onChangeText?.(text);
...
                        onClear?.();
                    }}>
                        <Ionicons name="close-circle"  size={20} color="#555" />
                    </TouchableOpacity>
                )}
                <TouchableOpacity
                    testID='search-button'
                    accessibilityRole="button"
                    accessibilityLabel="Open directions search"
                    style={styles.searchButton}
                    onPress={onClickButton}
                    activeOpacity={0.7}
                >
...
