...
    marginTop?: number;
    clearTrigger?: number;
};


const CATEGORIES: Category[] = [
    { id: 'restaurant',  label: 'Restaurants' },
    { id: 'coffee',      label: 'Coffee Shops'},
    { id: 'pharmacy',    label: 'Pharmacy'},
];
export function POICategory({
                                userLocation,
                                radius,
...
